--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ikalbotz",
-  "version": "12.1.0",
+  "name": "Alphabot",
+  "version": "13.1.0",
   "description": "WhatsApp bot",
   "zeeone": "zeeone.js",
   "directories": {
